--- a/assets/i18n/en_sgd.json
+++ b/assets/i18n/en_sgd.json
@@ -92,8 +92,8 @@
   },
   "event_page": {
     "header": "CHINESE NEW YEAR ANGPOW RAIN",
-    "top_banner": "<img src=\"assets/images/new-year/banner-MYR.png\" />",
-    "top_banner_mobile": "<img src=\"assets/images/new-year/banner-MYR-mobile.png\" />",
+    "top_banner": "<img src=\"assets/images/new-year/banner-SGD.png\" />",
+    "top_banner_mobile": "<img src=\"assets/images/new-year/banner-SGD-mobile.png\" />",
     "how_to_play": "How To Play",
     "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
     "Date": "Date",
@@ -101,11 +101,11 @@
     "title": "CHINESE NEW YEAR ANGPOW RAIN MINI GAMES T&C",
     "description": "All OB members are entitled to participate and play in this Mini Game. Promotion period starts from 15th Jan 2022 12:00:00 (GMT+8) until 30th Jan 2023 23:59:59 (GMT+8).",
     "How_to_Claim": "How to Claim",
-    "How_to_Claim__description": "To redeem the mini game ticket, members are required to make a single minimum deposit of MYR 100 to get 1 ticket.",
+    "How_to_Claim__description": "To redeem the mini game ticket, members are required to make a single minimum deposit of SGD 100 to get 1 ticket.",
     "Rules": "Rules",
-    "Rules__description1": "1. In order to claim these Mini Games tickets, the deposit amount must be a single minimum of MYR 100 or above. Members are allowed to obtain a maximum of five (5) Mini Game Tickets per day.",
+    "Rules__description1": "1. In order to claim these Mini Games tickets, the deposit amount must be a single minimum of SGD 100 or above. Members are allowed to obtain a maximum of five (5) Mini Game Tickets per day.",
     "Rules__description2": "2. Once you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks shooting direction and claim the Cash Prizes. All prizes will be credited to the player's account automatically within 60 seconds.",
-    "Rules__description3": "3. You are require to meet x1 turnover before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: MYR 999<br/>Required Bet Amount = MYR 999 x 1 = MYR 999",
+    "Rules__description3": "3. You are require to meet x1 turnover before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: SGD 999<br/>Required Bet Amount = SGD 999 x 1 = SGD 999",
     "Rules__description4": "4. The Mini Game's ticket is only available from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8) and will expire on 19th Dec 2022 00:00:00 (GMT+8)",
     "Rules__description5": "5. Members must use all tickets before the expiration date",
     "Rules__description6": "6. This promotion cannot be used in conjunction with other OB promotions.",
@@ -167,11 +167,11 @@
     "how_to_play_step1__title": "Step 1",
     "how_to_play_step1__description": "LOGIN or REGISTER an account at OB to participate",
     "how_to_play_step2__title": "Step 2",
-    "how_to_play_step2__description": "Daily single deposit MYR 100 to earn 1 ticket during the event period",
+    "how_to_play_step2__description": "Daily single deposit SGD 100 to earn 1 ticket during the event period",
     "how_to_play_step3__title": "Step 3",
     "how_to_play_step3__description": "Catch the Angpow to earn cash!",
     "event_icon": "<img src=\"assets/images/world-cup/en/ENG-GIF.gif\" />",
-    "price_format": "MYR",
+    "price_format": "SGD",
     "": "" 
   },
   "": "",
