--- a/assets/i18n/zh_sgd.json
+++ b/assets/i18n/zh_sgd.json
@@ -92,8 +92,8 @@
   },
   "event_page": {
     "header": "农历新年天降红包与",
-    "top_banner": "<img src=\"assets/images/new-year/banner-MYR-zh.png\" />",
-    "top_banner_mobile": "<img src=\"assets/images/new-year/banner-MYR-mobile-zh.png\" />",
+    "top_banner": "<img src=\"assets/images/new-year/banner-SGD-zh.png\" />",
+    "top_banner_mobile": "<img src=\"assets/images/new-year/banner-SGD-mobile-zh.png\" />",
     "how_to_play": "游戏教学",
     "YOUR_PRIZE_HISTORY": "您的获奖记录",
     "Date": "日期",
@@ -101,11 +101,11 @@
     "title": "农历新年红包雨小游戏活动规则",
     "description": "所有欧宝会员都有权参与这个小游戏。活动日期为 2023 年 1 月 15日 12:00:00 (GMT+8) 至 2023 年 1 月 30 日 23:59:59 (GMT+8) 。",
     "How_to_Claim": "如何兑换",
-    "How_to_Claim__description": "要兑换小游戏门票，会员必须存入最低单笔存款 MYR100 才能获得 1 张门票。",
+    "How_to_Claim__description": "要兑换小游戏门票，会员必须存入最低单笔存款 SGD100 才能获得 1 张门票。",
     "Rules": "活动规则",
-    "Rules__description1": "1. 要领取这些小游戏门票，存款金额必须至少为 MYR100 或以上。会员每天最多可获得五 (5) 张小游戏门票。",
+    "Rules__description1": "1. 要领取这些小游戏门票，存款金额必须至少为 SGD100 或以上。会员每天最多可获得五 (5) 张小游戏门票。",
     "Rules__description2": "2. 兑换小游戏门票后，您必须在 2 个点球方向中选择 1 个射击方向并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
-    "Rules__description3": "3. 提款需先完成1倍流水要求。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：MYR999<br/>所需投注金额 = MYR999 x 1 = MYR999",
+    "Rules__description3": "3. 提款需先完成1倍流水要求。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：SDG999<br/>所需投注金额 = SGD999 x 1 = SGD999",
     "Rules__description4": "4、小游戏门票有效期为2022年11月19日12:00:00（GMT+8）至2022年12月18日23:59:59（GMT+8），有效期至2022年12月19日00:00:00（GMT+8)",
     "Rules__description5": "5.会员必须在有效期内使用所有门票。",
     "Rules__description6": "6. 此优惠不可与其他欧宝优惠同时使用。",
@@ -167,12 +167,11 @@
     "how_to_play_step1__title": "步骤1",
     "how_to_play_step1__description": "在欧宝登录或注册帐户并参与",
     "how_to_play_step2__title": "步骤2",
-    "how_to_play_step2__description": "活动期间每日单笔存款 MYR100 可赢取 1 张门票",
+    "how_to_play_step2__description": "活动期间每日单笔存款 SGD100 可赢取 1 张门票",
     "how_to_play_step3__title": "步骤3",
     "how_to_play_step3__description": "点击红包并赢取现金！",
     "event_icon": "<img src=\"assets/images/world-cup/en/CN-GIF.gif\" />",
-    "price_format": "MYR",
-    "": "",
+    "price_format": "SGD",
     "": "" 
   },
   "": "",
