--- a/assets/i18n/zh_sgd.json
+++ b/assets/i18n/zh_sgd.json
@@ -91,7 +91,7 @@
     "": ""
   },
   "event_page": {
-    "header": "农历新年天降红包与",
+    "header": "农历新年天降红包雨",
     "top_banner": "<img src=\"assets/images/new-year/banner-SGD-zh.png\" />",
     "top_banner_mobile": "<img src=\"assets/images/new-year/banner-SGD-mobile-zh.png\" />",
     "how_to_play": "游戏教学",
