--- a/assets/i18n/zh_sgd.json
+++ b/assets/i18n/zh_sgd.json
@@ -99,15 +99,15 @@
     "Date": "日期",
     "Realbet": "奖金",
     "title": "农历新年红包雨小游戏活动规则",
-    "description": "所有欧宝会员都有权参与这个小游戏。活动日期为 2023 年 1 月 15日 12:00:00 (GMT+8) 至 2023 年 1 月 30 日 23:59:59 (GMT+8) 。",
+    "description": "所有欧宝会员都有权参与这个小游戏。活动日期为 2023 年 1 月 18日 12:00:00 (GMT+8) 至 2023 年 2月 5 日 23:59:59 (GMT+8) 。",
     "How_to_Claim": "如何兑换",
     "How_to_Claim__description": "要兑换小游戏门票，会员必须存入最低单笔存款 SGD100 才能获得 1 张门票。",
     "Rules": "活动规则",
     "Rules__description1": "1. 要领取这些小游戏门票，存款金额必须至少为 SGD100 或以上。会员每天最多可获得五 (5) 张小游戏门票。",
-    "Rules__description2": "2. 兑换小游戏门票后，您必须在 2 个点球方向中选择 1 个射击方向并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
-    "Rules__description3": "3. 提款需先完成1倍流水要求。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：SDG999<br/>所需投注金额 = SGD999 x 1 = SGD999",
-    "Rules__description4": "4、小游戏门票有效期为2022年11月19日12:00:00（GMT+8）至2022年12月18日23:59:59（GMT+8），有效期至2022年12月19日00:00:00（GMT+8)",
-    "Rules__description5": "5.会员必须在有效期内使用所有门票。",
+    "Rules__description2": "2. 兑换小游戏门票后，您可以3选1个级别进行游戏。在 10 秒内接住掉落的红包雨并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
+    "Rules__description3": "3. 提款需先完成1倍流水要求。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：SGD 888<br/>所需投注金额 = SGD 888 x 1 = SGD 888",
+    "Rules__description4": "4. 小游戏门票有效期为2023年1月18日12:00:00（GMT+8）至2023年2月5日23:59:59（GMT+8），有效期至2023年2月6日23:59:59（GMT+8)",
+    "Rules__description5": "5. 会员必须在有效期内使用所有门票。",
     "Rules__description6": "6. 此优惠不可与其他欧宝优惠同时使用。",
     "Rules__description7": "7. 欧宝保留随时修改、取消、暂停或终止促销和/或更改上述促销条款的权利，恕不另行通知。",
     "Rules__description8": "8. 参与会员必须接受并遵守上述所有条款以及欧宝网站上载明的所有相关规则和规定。",
